# relice_image

./: .gitignore  CMakeLists.txt  README.md
include/: ImageInteractionCallback.h  ImageRender.h
src/: ImageInteractionCallback.cpp  ImageRender.cpp  main.cpp
test/: CMakeLists.txt  ImageInteractionCallbackTest.cpp  ImageRenderTest.cpp  main.cpp
